[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/tiles/Tile.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/Mask.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/SmallWater.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/SmallSand.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/SmallForest.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/SmallGrass.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/RedMask.png" type="Texture" id=7]

[node name="Tile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SmallSpriteManager" type="Node2D" parent="."]

[node name="SmallGrass" type="Sprite" parent="SmallSpriteManager"]
position = Vector2( -8, -8 )
texture = ExtResource( 6 )

[node name="SmallForest" type="Sprite" parent="SmallSpriteManager"]
position = Vector2( 8, -8 )
texture = ExtResource( 5 )

[node name="SmallWater" type="Sprite" parent="SmallSpriteManager"]
position = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="SmallSand" type="Sprite" parent="SmallSpriteManager"]
position = Vector2( -8, 8 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Mask" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
